--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\IsoTools\Editor\IsoAlignmentWindow.cs" />
      <Compile Include="Assets\IsoTools\Editor\IsoObjectEditor.cs" />
+     <Compile Include="Assets\IsoTools\Editor\IsoRigidbodyEditor.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
