--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -46,9 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\IsoTools\Editor\IsoAlignmentWindow.cs" />
+     <Compile Include="Assets\IsoTools\Editor\IsoEditorWindow.cs" />
      <Compile Include="Assets\IsoTools\Editor\IsoObjectEditor.cs" />
-     <Compile Include="Assets\IsoTools\Editor\IsoRigidbodyEditor.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
