--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,7 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\IsoTools\Examples\Scripts\CircleFlyCamera.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\CircleFly.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoAutoController.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoController.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoObject.cs" />
