--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -46,7 +46,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\IsoTools\Editor\IsoBoxColliderEditor.cs" />
      <Compile Include="Assets\IsoTools\Editor\IsoObjectEditor.cs" />
+     <Compile Include="Assets\IsoTools\Editor\IsoSphereColliderEditor.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
