--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,10 +46,12 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\AlienBallSpawner.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\CircleFly.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\IsoAutoController.cs" />
-     <Compile Include="Assets\IsoTools\Examples\Scripts\IsoController.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
+     <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoBoxCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollision.cs" />
