--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,10 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetTilePosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetTilePosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoBoxCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollider.cs" />
