--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoComponentAction.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetSize.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
