--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,15 +51,16 @@
      <Compile Include="Assets\IsoTools\Examples\Scripts\CubeAutoMovement.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\IsoEchoListener.cs" />
      <Compile Include="Assets\IsoTools\Examples\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoChangeWorld.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoComponentAction.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoGetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoResize.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetMode.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetPosition.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetSize.cs" />
+     <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoSetWorldProps.cs" />
      <Compile Include="Assets\IsoTools\PlayMaker\Actions\IsoTranslate.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoBoxCollider.cs" />
      <Compile Include="Assets\IsoTools\Scripts\IsoCollider.cs" />
